// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > Form Login successfully 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="login-container"
    >
      <form
        action=""
        class="login-form"
        method="POST"
        role="login-form"
      >
        <div
          class="username"
        >
          <label
            for="username"
          >
            Nome de Usuário:
          </label>
          <input
            id="username"
            name="username"
            required=""
            type="text"
            value="test"
          />
        </div>
        <div
          class="password"
        >
          <label
            for="password"
          >
            Senha:
          </label>
          <input
            id="password"
            name="password"
            required=""
            type="password"
            value="test"
          />
        </div>
        <button
          class="login-enter"
          type="submit"
        >
          Entrar
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`App component > renders form correct when no token registered 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="login-container"
    >
      <form
        action=""
        class="login-form"
        method="POST"
        role="login-form"
      >
        <div
          class="username"
        >
          <label
            for="username"
          >
            Nome de Usuário:
          </label>
          <input
            id="username"
            name="username"
            required=""
            type="text"
            value=""
          />
        </div>
        <div
          class="password"
        >
          <label
            for="password"
          >
            Senha:
          </label>
          <input
            id="password"
            name="password"
            required=""
            type="password"
            value=""
          />
        </div>
        <button
          class="login-enter"
          type="submit"
        >
          Entrar
        </button>
      </form>
    </div>
  </div>
</div>
`;
